# codeql-parser

./: .gitignore  GUI_README.md  README.md  TODO.txt  main.py  package-lock.json  paths.py  regen_drakon.py  requirements.txt  run_project_gui.py
.claude/: settings.json
core/: codeql_analyzer.py  file_lists.py  fo_filters.py  joern_analyzer.py  project_db.py  project_runner.py  report_generator.py  sql_analyzer.py
docs/: PRINCIPLES_C_CPP.md
dynamic/: README.md  _instrument_common.py  analyze_project.py  coverage_report.py  instrument_c_make.py  instrument_cpp.py  instrument_java.py  instrument_js.py  instrument_php.py  instrument_py.py  normalize_perms.ps1  normalize_perms_apply.sh  normalize_perms_genlist.sh  route_match_report.py  src_copy.py
examples/test-projects/small-projects/test-project-cpp-branches/: CMakeLists.txt  Makefile  README.md  advanced_demo.cpp  advanced_demo.h  exception_demo.cpp  exception_demo.h  if_demo.cpp  if_demo.h  loop_demo.cpp  loop_demo.h  macro_demo.cpp  macro_demo.h  main.cpp  negative_demo.cpp  negative_demo.h  oneline_demo.cpp  oneline_demo.h  pipeline.cpp  pipeline.h  single_stmt_demo.cpp  single_stmt_demo.h  unsafe_demo.cpp  unsafe_demo.h
gui/: gui_project.py  gui_styles.py  gui_widgets.py
native/: ogdf_layout.cpp
scripts/: _check_db.py  _gen_reports.py  _run_php_once.py  _tmp_chk.py  monitor_mem.sh
tests/: conftest.py  test_cpp.py  test_cqtrace_runtime.py  test_file_lists.py  test_java.py  test_probe_geometry.py  test_project_db.py  test_route_match.py  test_runtime_header.py  test_small_cpp.py  test_small_java.py  (+3 more)
(+214 files in other folders)
